# rustycode

./: .audit.toml  .clippy.toml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rustycodeignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  TEAM_LEARNINGS.md  deny.toml  final_final_fix.py  final_fix.py  fix_all.py  fix_borrow.py  fix_final.py  fix_overlays.py  fix_paths.py  fix_tools.py  fix_tui.py  fix_types.py  mcp.json.example  refactor.py  rust-analyzer.toml
crates/ratzilla-wasm/: Cargo.toml
crates/ratzilla-wasm/src/: lib.rs
crates/ratzilla-wasm/www/: index.html
crates/rustycode-acp/: Cargo.toml
crates/rustycode-acp/examples/: acp_server.rs
crates/rustycode-acp/src/: lib.rs  llm_integration.rs  prompt_handler.rs  server.rs  tool_executor.rs  types.rs
crates/rustycode-acp/tests/: types_tests.rs
crates/rustycode-auth/: Cargo.toml
crates/rustycode-auth/src/: error.rs  github_copilot.rs  lib.rs  oauth.rs  token_store.rs
crates/rustycode-bench/: Cargo.toml
crates/rustycode-bench/src/: lib.rs
crates/rustycode-bus/: Cargo.toml  README.md
crates/rustycode-bus/examples/: basic_usage.rs  hooks.rs  hybrid_publishing.rs  wildcard_matching.rs
crates/rustycode-bus/src/: error.rs  events.rs  hook_registry.rs  hooks.rs  lib.rs
crates/rustycode-bus/tests/: integration_test.rs
crates/rustycode-cli/: Cargo.toml  README.md
crates/rustycode-cli/.rustycode/: tasks.json
crates/rustycode-cli/examples/: prompts.rs
crates/rustycode-cli/src/: lib.rs  main.rs  prompt.rs  server.rs
crates/rustycode-cli/tests/: prompt_tests.rs  tui_integration_test.rs
crates/rustycode-config/: Cargo.toml  README.md
crates/rustycode-config/benches/: config_performance.rs
crates/rustycode-config/src/: backup.rs  jsonc.rs  lib.rs  loader.rs  parser.rs  schema.rs  substitutions.rs  wellknown.rs
crates/rustycode-connector/: CONNECTOR_MATRIX.md  Cargo.toml  README.md
crates/rustycode-connector/examples/: connector_benchmark.rs  connector_detect.rs
crates/rustycode-connector/src/: detection.rs  install.rs  it2.rs  iterm.rs  iterm2_native.rs  lib.rs  tmux.rs
crates/rustycode-connector/tests/: connector_comparison.rs
crates/rustycode-core/: Cargo.toml  README.md
crates/rustycode-core/examples/: context-budgeting.rs
crates/rustycode-core/src/: anomaly.rs  build_detection.rs  cache.rs  edit_history.rs  execution.rs  iteration_checkpoint.rs  lib.rs  plan_executor.rs  session.rs  session_context.rs  session_manager.rs  sleep.rs  snapshot.rs  tenacity.rs  todo_enforcer.rs  tool_result_storage.rs  ultrawork.rs  validation.rs  verification_gates.rs
crates/rustycode-core/tests/: deadlock_tests.rs  error_path_tests.rs  integration_architect_scalpel.rs  llm_provider_integration.rs  parallel_execution_tests.rs  team_architect_scalpel.rs  team_e2e_test.rs  team_use_cases.rs  timeline_demo.rs
crates/rustycode-git/: Cargo.toml  README.md
crates/rustycode-git/src/: lib.rs
crates/rustycode-guard/: Cargo.toml
crates/rustycode-guard/benches/: hook_bench.rs
crates/rustycode-guard/src/: codec.rs  lib.rs  main.rs  permission.rs  post_tool.rs  pre_tool.rs  rules.rs
crates/rustycode-guard/tests/: integration_test.rs  rules_test.rs
crates/rustycode-id/: Cargo.toml  README.md
crates/rustycode-id/examples/: id_demo.rs
crates/rustycode-id/src/: lib.rs
crates/rustycode-learning/: Cargo.toml  README.md
crates/rustycode-learning/src/: actions.rs  builtin.rs  error.rs  extractor.rs  learning_loop.rs  lib.rs  patterns.rs  storage.rs  triggers.rs
crates/rustycode-litert/: Cargo.toml
crates/rustycode-litert/src/: installer.rs  lib.rs  manager.rs  process.rs
crates/rustycode-litert/tests/: smoke.rs
crates/rustycode-llm/: Cargo.toml  README.md
crates/rustycode-llm/examples/: model_routing.rs  provider_router_example.rs  search_result_example.rs
crates/rustycode-llm/src/: advisor.rs  anthropic.rs  anthropic_streaming.rs  azure.rs  bedrock.rs  caching.rs  circuit_breaker.rs  client_pool.rs  cohere.rs  compaction.rs  conversation.rs  copilot.rs  cost_tracker.rs  cross_provider_tests.rs  degradation_status.rs  download_manager.rs  error_recovery.rs  gemini.rs  graceful_degradation.rs  huggingface.rs  lib.rs  litert_lm.rs  mistral.rs  mock.rs  model_info.rs  model_router.rs  offline_mode.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  provider.rs  provider_error_policy.rs  provider_fallback.rs  provider_helpers.rs  provider_metadata.rs  provider_registry_v2.rs  provider_router.rs  provider_v2.rs  rate_limiter.rs  (+13 more)
crates/rustycode-llm/tests/: anthropic_error_test.rs  anthropic_integration_test.rs  anthropic_search_result_test.rs  anthropic_streaming_test.rs  anthropic_tool_streaming_test.rs  e2e_anthropic_provider.rs  e2e_anthropic_tool_selection.rs  e2e_gemini_provider.rs  e2e_gemini_tool_selection.rs  e2e_mock_provider.rs  e2e_openai_provider.rs  (+10 more)
crates/rustycode-load/: Cargo.toml  README.md
crates/rustycode-lsp/: Cargo.toml
crates/rustycode-macros/: Cargo.toml
crates/rustycode-mcp/: Cargo.toml  README.md
crates/rustycode-memory/: Cargo.toml
crates/rustycode-observability/: Cargo.toml
crates/rustycode-orchestra/: Cargo.toml
crates/rustycode-plugins/: Cargo.toml
crates/rustycode-prompt/: Cargo.toml
crates/rustycode-protocol/: Cargo.toml  README.md
crates/rustycode-providers/: Cargo.toml
crates/rustycode-runtime/: Cargo.toml  README.md
examples/: Cargo.toml  README_TEXT_EDITOR_TEST.md  async_patterns.rs  basic_usage.rs  cross_crate_event_example.rs  error_handling.rs  event_patterns.rs  event_persistence_example.rs  gsd_demo.rs  input_handler_example.rs  multi_provider.rs  permission_enforcement_example.rs  plan_storage_demo.rs  provider_metadata_demo.rs  streaming.rs  test_markdown_rendering.rs  test_text_editor_e2e.rs  test_web_search.rs  tool_comparison.rs  verify_migration.rs
examples/compile-time-tools/: Cargo.toml  README.md  basic_tools.rs
examples/workflows/: comprehensive_review.yaml  quick_review.yaml  refactor_component.json
mcp-test-server/: Cargo.toml
mcp-test-server/src/: main.rs
(+1143 files in other folders)
