[package]
name = "rustycode-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
secrecy = { version = "0.10", features = ["serde"] }
rustycode-llm = { path = "../crates/rustycode-llm" }
rustycode-tui = { path = "../crates/rustycode-tui" }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"