[package]
name = "ratzilla-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
ratzilla = "0.3.0"
