[package]
name = "rustycode-auth"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
keyring = "3.0"
reqwest = { workspace = true }
sha2 = { workspace = true }
base64.workspace = true
rand.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
