[package]
name = "rustycode-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Benchmark runner for agent evaluation (Terminal Bench compatible)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "process", "macros", "time", "fs"] }
toml.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
async-trait.workspace = true
rustycode-llm = { path = "../rustycode-llm" }
secrecy.workspace = true

[lints]
workspace = true
