[package]
name = "rustycode-connector"
version = "0.1.0"
edition = "2021"
description = "Terminal connector abstraction for rustycode (tmux, iTerm2 support)"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Native iTerm2 WebSocket/Unix socket support
iterm2-client = "0.2"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "fs"] }
futures-util.workspace = true

[[example]]
name = "connector_benchmark"
path = "examples/connector_benchmark.rs"

[[test]]
name = "connector_comparison"
path = "tests/connector_comparison.rs"

[dev-dependencies]
