[package]
name = "rustycode-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
