[package]
name = "rustycode-guard"
version = "0.1.0"
edition = "2021"
authors = ["RustyCode"]
license = "MIT"
description = "Standalone guardrail binary for hook-based security enforcement"
repository = "https://github.com/luengnat/rustycode"

[lib]
name = "rustycode_guard"
path = "src/lib.rs"

[[bin]]
name = "rustycode-guard"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.5"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
tempfile = "3.3"
