[package]
name = "rustycode-id"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
getrandom = "0.2"
thiserror.workspace = true

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
