[package]
name = "rustycode-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
rustycode-protocol = { path = "../rustycode-protocol" }
rustycode-config = { path = "../rustycode-config" }
rustycode-tools = { path = "../rustycode-tools", default-features = false }
async-trait.workspace = true
tokio-stream = "0.1"
tempfile.workspace = true
reqwest-eventsource = "0.6.0"
thiserror.workspace = true
secrecy.workspace = true
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
uuid = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
litert-lm = { version = "0.2.1", optional = true }
rustycode-litert = { path = "../rustycode-litert", optional = true }

[features]
default = ["litert"]
# Enable live API integration tests (requires provider API keys, network access)
live-api-tests = []
# Enable vector memory integration (semantic search, auto-routing)
vector-memory = ["rustycode-tools/vector-memory"]
# Enable LiteRT-LM local inference provider
litert = ["dep:rustycode-litert"]
