[package]
name = "rustycode-load"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "macros"] }
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
async-trait.workspace = true
statrs = "0.16"
futures.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true

[lints]
workspace = true
