[package]
name = "rustycode-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
walkdir.workspace = true
chrono.workspace = true
sha2.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid.workspace = true

[lints]
workspace = true
