[package]
name = "rustycode-orchestra"
version.workspace = true
edition.workspace = true
license = "MIT"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
regex.workspace = true
sha2.workspace = true
url = "2.5"
git2.workspace = true
once_cell.workspace = true
dirs.workspace = true
indexmap = "2.2"
regex-lite = "0.1"
rand.workspace = true
async-stream = "0.3"
async-trait.workspace = true
shell-words.workspace = true
rustycode-llm = { path = "../rustycode-llm" }
rustycode-protocol = { path = "../rustycode-protocol" }
rustycode-tools = { path = "../rustycode-tools", default-features = false }

[dev-dependencies]
tempfile.workspace = true
async-stream = "0.3"
parking_lot.workspace = true
