[package]
name = "rustycode-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
schemars = "0.8"
rustycode-id = { path = "../rustycode-id" }

[lints]
workspace = true
